[gcc/objc/ChangeLog] 2005-01-15  Ziemowit Laski  <zlaski@apple.com>

PR objc/19321
        * objc-act.c (get_arg_type_list): Decay function arguments into
        pointers.
        (objc_push_parm): Likewise; bring PARM_DECL construction closer
        in line with what the C front-end does.
        (objc_get_parm_info): Call pushdecl() and finish_decl() on
        each PARM_DECL, like the C front-end does.
        (start_method_def): Remove redundant ARRAY_TYPE decay.
        (objc_start_function): Bring closer in line with what the
        C front-end does for functions.

[gcc/testsuite/ChangeLog]
2005-01-15  Ziemowit Laski  <zlaski@apple.com>

        PR objc/19321
        * objc.dg/func-ptr-2.m: New.
        * objc.dg/volatile-1.m: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@93706 138bc75d-0d04-0410-961f-82ee72b054a4